--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,51 @@
 ChangeLog :
 ===========
 
+2023/07/03 : 2.8.1
+    - BUG/MINOR: stats: Fix Lua's `get_stats` function
+    - BUG/MINOR: stream: do not use client-fin/server-fin with HTX
+    - BUG/MINOR: quic: Possible crash when SSL session init fails
+    - CONTRIB: Add vi file extensions to .gitignore
+    - BUG/MINOR: spoe: Only skip sending new frame after a receive attempt
+    - DOC: quic: fix misspelled tune.quic.socket-owner
+    - DOC: config: fix jwt_verify() example using var()
+    - DOC: config: fix rfc7239 converter examples (again)
+    - BUG/MINOR: cfgparse-tcp: leak when re-declaring interface from bind line
+    - BUG/MINOR: proxy: add missing interface bind free in free_proxy
+    - BUG/MINOR: proxy/server: free default-server on deinit
+    - BUG/MEDIUM: hlua: Use front SC to detect EOI in HTTP applets' receive functions
+    - BUG/MINOR: peers: Improve detection of config errors in peers sections
+    - REG-TESTS: stickiness: Delay haproxys start to properly resolv variables
+    - BUG/MINOR: ssl: log message non thread safe in SSL Hanshake failure
+    - BUG/MINOR: quic: Wrong encryption level flags checking
+    - BUG/MINOR: quic: Address inversion in "show quic full"
+    - BUG/MINOR: server: inherit from netns in srv_settings_cpy()
+    - BUG/MINOR: namespace: missing free in netns_sig_stop()
+    - BUG/MINOR: quic: Missing initialization (packet number space probing)
+    - BUG/MINOR: quic: Possible crash in quic_conn_prx_cntrs_update()
+    - BUG/MINOR: quic: Possible endless loop in quic_lstnr_dghdlr()
+    - BUG/MEDIUM: mworker: increase maxsock with each new worker
+    - BUG/MINOR: quic: ticks comparison without ticks API use
+    - DOC: Add tune.h2.be.* and tune.h2.fe.* options to table of contents
+    - DOC: Add tune.h2.max-frame-size option to table of contents
+    - REGTESTS: h1_host_normalization : Add a barrier to not mix up log messages
+    - DOC: Attempt to fix dconv parsing error for tune.h2.fe.initial-window-size
+    - BUG/MINOR: http_ext: fix if-none regression in forwardfor option
+    - BUG/MINOR: mworker: leak of a socketpair during startup failure
+    - BUG/MINOR: quic: Prevent deadlock with CID tree lock
+    - BUG/MEDIUM: quic: error checking buffer large enought to receive the retry tag
+    - BUG/MINOR: config: fix stick table duplicate name check
+    - BUG/MINOR: quic: Missing random bits in Retry packet header
+    - BUG/MINOR: quic: Wrong Retry paquet version field endianess
+    - BUG/MINOR: quic: Wrong endianess for version field in Retry token
+    - IMPORT: slz: implement a synchronous flush() operation
+    - MINOR: compression/slz: add support for a pure flush of pending bytes
+    - BUILD: debug: avoid a build warning related to epoll_wait() in debug code
+    - MINOR: quic: Move QUIC encryption level structure definition
+    - MINOR: quic: Move packet number space related functions
+    - MINOR: quic: Reduce the maximum length of TLS secrets
+    - CLEANUP: quic: Remove server specific about Initial packet number space
+
 2023/05/31 : 2.8.0
     - MINOR: compression: Improve the way Vary header is added
     - BUILD: makefile: search for SSL_INC/wolfssl before SSL_INC
